<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">alper_s_application2</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
<string name="lbl_email">Email</string>
<string name="msg_last_measuremen">Last Measurement</string>
<string name="lbl_log_in2">Log in</string>
<string name="lbl_steps">Steps</string>
<string name="lbl_height">Height</string>
<string name="lbl_sign_out">Sign out</string>
<string name="lbl_gender">Gender</string>
<string name="msg_account_informa">Account Information</string>
<string name="lbl_age">Age</string>
<string name="lbl_weight">Weight</string>
<string name="lbl_bmi">BMI</string>
<string name="lbl_steps_history">Steps History</string>
<string name="lbl_date_of_birth">Date of Birth</string>
<string name="lbl_you_re_offline">You\u2019re offline</string>
<string name="msg_already_have_an">Already have an account?</string>
<string name="msg_are_you_sure_yo">Are you sure you want to sign out?</string>
<string name="lbl_gateway_pairing">Gateway Pairing</string>
<string name="lbl_bmi_history">BMI History</string>
<string name="msg_are_you_sure_yo2">Are you sure you want to delete this account?</string>
<string name="lbl_goals">Goals</string>
<string name="lbl_connect">Connect</string>
<string name="lbl_log_in">log in.</string>
<string name="lbl_today">Today</string>
<string name="lbl_e_mail2">E-mail</string>
<string name="lbl_sign_in">Sign in.</string>
<string name="msg_target_step_cou">Target Step Count</string>
<string name="lbl_sign_in2">Sign in</string>
<string name="lbl_target_weight">Target Weight</string>
<string name="msg_enter_your_acco">Enter your account details or</string>
<string name="msg_let_s_start_bui">Let\u2019s start building a healthy life.</string>
<string name="lbl_statistics">Statistics</string>
<string name="msg_available_devic">Available Devices</string>
<string name="lbl_notifications">Notifications</string>
<string name="lbl_current_weight">Current Weight</string>
<string name="lbl_sign_up">Sign up</string>
<string name="lbl_password">Password</string>
<string name="lbl_weight_history">Weight History</string>
<string name="lbl_hello">HELLO</string>
<string name="msg_create_an_accou">Create an account</string>
<string name="lbl_username">Username</string>
<string name="msg_personal_inform">Personal Information</string>
<string name="lbl_save">Save</string>
<string name="msg_connect_to_the">Connect to the Internet</string>
<string name="msg_learn_your_body">Learn your body!</string>
</resources>
