<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="accountVM" type="com.alpersapplication.app.modules.account.data.viewmodel.AccountVM"/>
    </data>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearAccount"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_44pxv"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <LinearLayout android:gravity="center_horizontal"
            android:id="@+id/linearColumnsignout"
            android:layout_height="0dp"
            android:layout_marginEnd="@dimen/_26pxh"
            android:layout_marginStart="@dimen/_27pxh"
            android:layout_weight="1.0"
            android:layout_width="match_parent" android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearColumnuser"
                style="@style/groupStylecornerRadius_2"
                android:layout_width="match_parent"
                android:layout_height="699dp"
                android:gravity="start"
                android:orientation="vertical">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbarToolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10pxh"
                    app:contentInsetStart="0dp">

                    <LinearLayout
                        android:id="@+id/linearRowuser"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageButton
                            android:id="@+id/btnUser"
                            android:layout_width="@dimen/_50pxh"
                            android:layout_height="@dimen/_50pxh"
                            android:background="@drawable/rectangle_bg_bluegray_50_radius_25"
                            android:paddingHorizontal="@dimen/_10pxh"
                            android:paddingVertical="@dimen/_10pxv"
                            android:scaleType="fitCenter"
                            android:src="@drawable/img_user"
                            tools:ignore="ContentDescription" />

                        <TextView
                            android:id="@+id/txtHELLO"
                            style="@style/txtInterregular14_1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_3pxh"
                            android:layout_marginTop="@dimen/_3pxv"
                            android:layout_marginBottom="@dimen/_29pxv"
                            android:layout_weight="0.47"
                            android:ellipsize="end"
                            android:lineSpacingExtra="@dimen/_3pxh"
                            android:singleLine="true"
                            android:text="@{accountVM.accountModel.txtHELLO}"
                            tools:text="@string/lbl_hello" />
                    </LinearLayout>
                </androidx.appcompat.widget.Toolbar>

                <TextView
                    android:id="@+id/txtAccountInforma"
                    style="@style/txtIntersemibold14_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_16pxv"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:ellipsize="end"
                    android:lineSpacingExtra="@dimen/_3pxh"
                    android:singleLine="true"
                    android:text="@{accountVM.accountModel.txtAccountInforma}"
                    tools:text="@string/msg_account_informa" />

                <TextView
                    android:id="@+id/txtUsername"
                    style="@style/txtInterregular14_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8pxv"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:ellipsize="end"
                    android:lineSpacingExtra="@dimen/_3pxh"
                    android:singleLine="true"
                    android:text="@{accountVM.accountModel.txtUsername}"
                    tools:text="@string/lbl_username" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/txtEmail"
                    style="@style/txtInterregular14_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_27pxv"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:ellipsize="end"
                    android:lineSpacingExtra="@dimen/_3pxh"
                    android:singleLine="true"
                    android:text="@{accountVM.accountModel.txtEmail}"
                    tools:text="@string/lbl_e_mail2" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="TextView" />

                <TextView
                    android:id="@+id/txtPassword"
                    style="@style/txtInterregular14_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_32pxv"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:ellipsize="end"
                    android:lineSpacingExtra="@dimen/_3pxh"
                    android:singleLine="true"
                    android:text="@{accountVM.accountModel.txtPassword}"
                    tools:text="@string/lbl_password" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="TextView" />

                <TextView
                    android:id="@+id/txtPersonalInform"
                    style="@style/txtIntersemibold14_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_16pxv"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:ellipsize="end"
                    android:lineSpacingExtra="@dimen/_3pxh"
                    android:singleLine="true"
                    android:text="@{accountVM.accountModel.txtPersonalInform}"
                    tools:text="@string/msg_personal_inform" />

                <TextView
                    android:id="@+id/txtAge"
                    style="@style/txtInterregular14_1"
                    android:layout_width="109dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_weight="0.35"
                    android:ellipsize="end"
                    android:lineSpacingExtra="@dimen/_3pxh"
                    android:singleLine="true"
                    android:text="@{accountVM.accountModel.txtAge}"
                    tools:text="@string/lbl_age" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="TextView" />

                <TextView
                    android:id="@+id/txtGender"
                    style="@style/txtInterregular14_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_weight="0.35"
                    android:ellipsize="end"
                    android:lineSpacingExtra="@dimen/_3pxh"
                    android:singleLine="true"
                    android:text="@{accountVM.accountModel.txtGender}"
                    tools:text="@string/lbl_gender" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="TextView" />

                <TextView
                    android:id="@+id/txtHeight"
                    style="@style/txtInterregular14_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_27pxv"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:ellipsize="end"
                    android:lineSpacingExtra="@dimen/_3pxh"
                    android:singleLine="true"
                    android:text="@{accountVM.accountModel.txtHeight}"
                    tools:text="@string/lbl_height" />

                <LinearLayout
                    android:id="@+id/linearRowage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_9pxv"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:gravity="start"
                    android:orientation="horizontal">

                </LinearLayout>

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="TextView" />

                <LinearLayout
                    android:id="@+id/linearColumngoals"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_16pxv"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:gravity="start"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtGoals"
                        style="@style/txtIntersemibold14_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_10pxh"
                        android:ellipsize="end"
                        android:lineSpacingExtra="@dimen/_3pxh"
                        android:singleLine="true"
                        android:text="@{accountVM.accountModel.txtGoals}"
                        tools:text="@string/lbl_goals" />

                    <LinearLayout
                        android:id="@+id/linearRowtargetweight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_9pxv"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/txtTargetWeight"
                            style="@style/txtInterregular14_1"
                            android:layout_width="127dp"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/_1pxv"
                            android:layout_weight="0.43"
                            android:ellipsize="end"
                            android:lineSpacingExtra="@dimen/_3pxh"
                            android:singleLine="true"
                            android:text="@{accountVM.accountModel.txtTargetWeight}"
                            tools:text="@string/lbl_target_weight" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="138dp"
                        android:layout_height="wrap_content"
                        android:text="TextView" />

                    <TextView
                        android:id="@+id/txtTargetStepCou"
                        style="@style/txtInterregular14_1"
                        android:layout_width="166dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_39pxh"
                        android:layout_marginTop="@dimen/_1pxv"
                        android:layout_weight="0.57"
                        android:ellipsize="end"
                        android:lineSpacingExtra="@dimen/_3pxh"
                        android:singleLine="true"
                        android:text="@{accountVM.accountModel.txtTargetStepCou}"
                        android:translationX="@dimen/_12pxv"
                        tools:text="@string/msg_target_step_cou" />

                    <TextView
                        android:id="@+id/textView11"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="TextView" />
                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/button"
                android:layout_width="225dp"
                android:layout_height="wrap_content"
                android:text="Sign out" />

            <Button
                android:id="@+id/button2"
                android:layout_width="174dp"
                android:layout_height="wrap_content"
                android:text="Delete Account" />
        </LinearLayout>
        <FrameLayout android:gravity="start"
            android:id="@+id/frameBottombar"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" style="@style/groupStylebluegray_51cornerRadius">
            <LinearLayout android:id="@+id/linearRowstatisticsbutt"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/_21pxv"
                android:layout_marginTop="@dimen/_22pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <ImageView android:id="@+id/imageStatisticsbutt"
                    android:layout_gravity="center"
                    android:layout_height="@dimen/_30pxh"
                    android:layout_marginStart="@dimen/_45pxh"
                    android:layout_width="@dimen/_30pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_vector"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_vector"/>
                <ImageView android:id="@+id/imageNotification"
                    android:layout_gravity="center"
                    android:layout_height="@dimen/_30pxh"
                    android:layout_marginStart="@dimen/_96pxh"
                    android:layout_width="@dimen/_26pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_notification"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_notification"/>
                <ImageView android:id="@+id/imageUserOne"
                    android:layout_gravity="center"
                    android:layout_height="@dimen/_30pxh"
                    android:layout_marginEnd="@dimen/_45pxh"
                    android:layout_marginStart="@dimen/_88pxh"
                    android:layout_width="@dimen/_30pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_user"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_user"/>
            </LinearLayout>
        </FrameLayout>
    </LinearLayout>
</layout>
