<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="logInVM" type="com.alpersapplication.app.modules.login.data.viewmodel.LogInVM"/>
    </data>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearLogin"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <LinearLayout android:gravity="center_horizontal"
            android:id="@+id/linearColumnarrowleft"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStylebluegray_300cornerRadius">
            <ImageButton
                android:background="@drawable/rectangle_bg_bluegray_50_radius_20"
                android:id="@+id/btnArrowleft"
                android:layout_gravity="start"
                android:layout_height="@dimen/_40pxh"
                android:layout_marginBottom="@dimen/_227pxv"
                android:layout_marginEnd="@dimen/_17pxh"
                android:layout_marginStart="@dimen/_17pxh"
                android:layout_marginTop="@dimen/_48pxv"
                android:layout_width="@dimen/_40pxh"
                android:paddingHorizontal="@dimen/_12pxh"
                android:paddingVertical="@dimen/_12pxv"
                android:scaleType="fitCenter"
                android:src="@drawable/img_arrowleft" tools:ignore="ContentDescription"/>
        </LinearLayout>
        <LinearLayout android:gravity="start"
            android:id="@+id/linearColumnlogin"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_26pxh"
            android:layout_marginStart="@dimen/_27pxh"
            android:layout_marginTop="@dimen/_63pxv"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStylecornerRadius">
            <TextView android:ellipsize="end" android:id="@+id/txtLogin"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_width="wrap_content"
                android:lineSpacingExtra="@dimen/_6pxh"
                android:singleLine="true"
                android:text="@{logInVM.logInModel.txtLogin}"
                style="@style/txtInterbold24" tools:text="@string/lbl_log_in2"/>
            <TextView android:ellipsize="end" android:id="@+id/txtEmail"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_23pxv"
                android:layout_width="wrap_content"
                android:lineSpacingExtra="@dimen/_3pxh"
                android:singleLine="true"
                android:text="@{logInVM.logInModel.txtEmail}"
                style="@style/txtInterregular14" tools:text="@string/lbl_email"/>
            <EditText
                android:background="@drawable/rectangle_border_black_900_radius_6"
                android:ellipsize="end" android:id="@+id/etEmailtextbox"
                android:inputType="text"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_7pxv"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@={logInVM.logInModel.etEmailtextboxValue}"
                style="@style/etRoundedOutline" tools:ignore="Autofill"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtPassword"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_26pxv"
                android:layout_width="wrap_content"
                android:lineSpacingExtra="@dimen/_3pxh"
                android:singleLine="true"
                android:text="@{logInVM.logInModel.txtPassword}"
                style="@style/txtInterregular14" tools:text="@string/lbl_password"/>
            <FrameLayout android:id="@+id/frameStackeye"
                android:layout_height="@dimen/_48pxv"
                android:layout_marginTop="@dimen/_7pxv"
                android:layout_width="@dimen/_307pxh" style="@style/groupStylecornerRadius_1">
                <ImageView android:id="@+id/imageEye"
                    android:layout_gravity="end"
                    android:layout_height="@dimen/_14pxh"
                    android:layout_marginHorizontal="@dimen/_17pxh"
                    android:layout_marginVertical="@dimen/_17pxv"
                    android:layout_width="@dimen/_19pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_eye"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_eye"/>
            </FrameLayout>
        </LinearLayout>
        <TextView android:ellipsize="end" android:id="@+id/txtSignin"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_27pxh"
            android:layout_marginStart="@dimen/_27pxh"
            android:layout_marginTop="@dimen/_44pxv"
            android:layout_width="wrap_content"
            android:lineSpacingExtra="@dimen/_3pxh"
            android:singleLine="true"
            android:text="@{logInVM.logInModel.txtSignin}"
            style="@style/txtIntersemibold14" tools:text="@string/lbl_sign_in2"/>
    </LinearLayout>
</layout>
